<resources>
    <string name="app_name">Lunessa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next">Next</string>
    <string name="finish">Finish</string>

    <string name="on_boarding">onBoarding</string>
    <string name="finished">finished</string>

    <string name="on_boarding_1_title">Discover Your Beauty!</string>
    <string name="on_boarding_1">Do you love doing makeup? Uncover your unique beauty with inspiring
        colors and easy steps, and explore the makeup styles that suit you best.</string>

    <string name="on_boarding_2_title">Enhance Your Beauty!</string>
    <string name="on_boarding_2">Step into the world of stunning makeup transformations.Vibrant palettes
        discover the looks that highlight your unique style.</string>

    <string name="on_boarding_3_title">Begin Your Beauty Journey!</string>
    <string name="on_boarding_3">Step into the magical world of colors and style.
        Are you ready to unveil your unique beauty?</string>

    <string name="mail">E mail</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signwith">Or sign in with</string>
    <string name="signup">Sign up</string>
    <string name="question">Don\'t have an account?</string>
    <string name="confirm">Confirm Password</string>
    <string name="signupwith">Or sign up with</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="fill_inthe_blank">Fill in the blank</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="must_six">Password length must be minimum 6 characters long</string>
    <string name="signin_success">Sign in successfully</string>
    <string name="please_signup">Please sign up</string>
    <string name="unable_google">Unable to log in with Google</string>

    <string name="failed_signin">Google Sign-In failed</string>
    <string name="mismatch_password">Mismatched password</string>
    <string name="missing_mailPass">Missing email address or password</string>
    <string name="signup_success">Sign up successfully</string>
    <string name="signup_failed">Sign up failed</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>

    <string name="blush">Blush</string>
    <string name="bronzer">Bronzer</string>
    <string name="eyebrow">Eyebrow</string>
    <string name="eyeliner">Eyeliner</string>
    <string name="eyeshadow">Eyeshadow</string>
    <string name="foundation">Foundation</string>
    <string name="lipliner">Lip liner</string>
    <string name="lipstick">Lipstick</string>
    <string name="mascara">Mascara</string>
    <string name="nailpolish">Nail polish</string>

    <string name="add_basket">Add to Basket</string>
    <string name="rv_up">Icon up</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="brand">Brand</string>
    <string name="tag">Tag</string>
    <string name="error">There was a problem retrieving product data. Please check your internet connection.</string>
    <string name="no_item">No items selected</string>

    <string name="clear">Clear</string>
    <string name="price">Price</string>
    <string name="list_products">List Products</string>
    <string name="selection">Please make your selection</string>

    <string name="back">Back</string>
    <string name="selected_item">Selected Item</string>

    <string-array name="brand_list">
        <item>Almay</item>
        <item>Alva</item>
        <item>Anna Sui</item>
        <item>Annabelle</item>
        <item>Benefit</item>
        <item>Boosh</item>
        <item>Burt\'s Bees</item>
        <item>Butter London</item>
        <item>C\'est Moi</item>
        <item>China Glaze</item>
        <item>Clinique</item>
        <item>Colourpop</item>
        <item>Covergirl</item>
        <item>Dalish</item>
        <item>Deciem</item>
        <item>Dior</item>
        <item>Dr. Hauschka</item>
        <item>E.L.F.</item>
        <item>Essie</item>
        <item>Fenty</item>
        <item>Glossier</item>
        <item>Green People</item>
        <item>Iman</item>
        <item>L\'Oréal</item>
        <item>Marcelle</item>
        <item>Marienatie</item>
        <item>Maybelline</item>
        <item>Milani</item>
        <item>Mineral Fusion</item>
        <item>Misa</item>
        <item>Mistura</item>
        <item>Moov</item>
        <item>Nudus</item>
        <item>Nyx</item>
        <item>Orly</item>
        <item>Pacifica</item>
        <item>Piggy Paint</item>
        <item>Pure Anada</item>
        <item>Revlon</item>
        <item>Salon Perfect</item>
        <item>Sante</item>
        <item>Sinful Colours</item>
        <item>Smashbox</item>
        <item>Stila</item>
        <item>Suncoat</item>
        <item>W3llpeople</item>
        <item>Wet N Wild</item>
        <item>Zorah</item>
        <item>Zorah Biocosmetiques</item>
        <item>Cargo Cosmetics</item>
        <item>Coastal Classic Creation</item>
        <item>Lotus Cosmetics USA</item>
        <item>Maia\'s Mineral Galaxy</item>
        <item>Penny Lane Organics</item>
        <item>Physicians Formula</item>
        <item>Rejuva Minerals</item>
        <item>Sally B\'s Skin Yummies</item>
    </string-array>

    <string-array name="tag_list">
        <item>Canadian</item>
        <item>CertClean</item>
        <item>Chemical Free</item>
        <item>Dairy Free</item>
        <item>EWG Verified</item>
        <item>EcoCert</item>
        <item>Fair Trade</item>
        <item>Gluten Free</item>
        <item>Natural</item>
        <item>No Talc</item>
        <item>Non-GMO</item>
        <item>Organic</item>
        <item>Sugar Free</item>
        <item>USDA Organic</item>
        <item>Vegan</item>
        <item>Alcohol Free</item>
        <item>Cruelty Free</item>
        <item>Oil Free</item>
        <item>Purpicks</item>
        <item>Silicone Sree</item>
        <item>Water Free</item>
        <item>Peanut Free Product</item>
        <item>Hypoallergenic</item>
    </string-array>
</resources>