<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.onboard.screens.FirstFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_220sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:src="@drawable/ic_makeup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/anticdidone"
        android:text="@string/on_boarding_2_title"
        android:textColor="@color/purple_magenta"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/anticdidone"
        android:text="@string/on_boarding_2"
        android:textAlignment="center"
        android:textColor="@color/pinkish_red"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/next_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_28sdp"
        android:layout_marginBottom="@dimen/_28sdp"
        android:fontFamily="@font/anticdidone"
        android:text="@string/next"
        android:textColor="@color/tealish_blue"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>