<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.filteritem.FilterItemFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/material_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_left" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anticdidone"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/tealish_blue"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            tools:text="@string/filter" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_filter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_search_type"
        app:layout_constraintTop_toBottomOf="@+id/material_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_apply"
        app:layout_constraintTop_toBottomOf="@+id/sv_filter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:backgroundTint="@color/pink_flare"
        android:fontFamily="@font/anticdidone"
        android:text="@string/apply"
        android:textColor="@color/tealish_blue"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>